2005-07-16  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* pcmanx-gtk2.spec.in: Modify the spec for fedora rpm package build.

2006-07-16  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Change bug-reporting address to PCManX in Google
	Groups.

	* po/Makevars: New file. Makefile variables for PO directory in any
	package using GNU gettext. This is required in recent intltools.

	* autogen.sh: Add '--force' to intltoolize to ensure generating
	latest Makefile.in.in .

2006-06-04  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Add fallback if {mozilla,firefox}-plugin is not
	available.
	Fallbacks used: "xulrunner-plugin". 

2005-04-22  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/core/termview.cpp,
	src/core/debug.h,
	src/view/telnetview.cpp,
	src/mainframe.cpp,
	src/notebook.cpp: Cancel the selected region when any key event.

2006-03-31  Jim Huang  <jserv@kaffe.org>

	* src/nancy_bot/msgdata.cpp: Include <unistd.h>.

2006-03-12  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Added CXXFLAGS += -fno-exceptions and -fno-rtti
	to reduce C++ overhead. In x86, the reduced size could be over
	100kb when debugging is enabled.

2006-03-12  Emfox Zhou  <emfoxzhou@gmail.com>

	* configure.ac, autogen.sh,
	po/zh_TW.po, po/zh_CN.po: Fix intltool related issues.

	* po/pcmanx.pot: deleted, now not necessary.

2005-03-12  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/appconfig.h,
	src/mainframe.cpp,
	src/appconfig.cpp: Polish center alignment mechanism.

2005-03-12  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Update the po files.

2005-03-12  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/core/termview.cpp,
	src/core/site.cpp,
	src/core/termview.h,
	src/core/site.h,
	src/appconfig.h,
	src/mainframe.cpp,
	src/sitepage.h,
	src/appconfig.cpp,
	po/zh_TW.po,
	po/zh_CN.po: Modify the horizontal and vertical center align mechanism.
